--- a/.env
+++ b/.env
@@ -1,5 +1,7 @@
-NEXTAUTH_URL = "http://localhost:3000/"
-NEXTAUTH_SECRET = "qwwtqyido"
-MONGO_URL = mongodb+srv://ekparivar9510:Jemin%409510@cluster0.cnluyj9.mongodb.net/authGit
-GITHUB_ID = d5e0ffa77582059bab87
-GITHUB_SECRET = 29e1c6bbfe9b9e3091816a666bbb7d3515d9247c
+NEXTAUTH_URL=http://127.0.0.1:3000
+NEXTAUTH_SECRET=qwwtqyido
+MONGO_URL=mongodb+srv://ekparivar9510:Jemin%409510@cluster0.cnluyj9.mongodb.net/authGit
+GITHUB_ID=d5e0ffa77582059bab87
+GITHUB_SECRET=29e1c6bbfe9b9e3091816a666bbb7d3515d9247c
+GOOGLE_CLIENT_ID=467220915152-8gqk24hcjmc91k3fs9descf655q758jd.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=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
